# slingcraft

./: CLAUDE.md  Cargo.toml  README.md  Trunk.toml  fill_template.ps1  fill_template.sh  index.html  justfile  manifest.json  multiplayer_plan.md  rust-toolchain  serve-web.sh  slingcraft.js  sw.js
.cargo/: config.toml
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
src/: app.rs  lib.rs  main.rs
