[package]
name = "slingcraft"
version = "0.1.0"
authors = ["Sam Carey <sam@samcarey.com>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.89"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_render",
    "bevy_winit",
    "bevy_sprite",
    "bevy_core_pipeline",
    "x11",
    "wayland",
    "webgl2",             # Use WebGL2 instead of WebGPU for web compatibility
    "png",
] }
bevy_egui = "0.36"
bevy_simple_subsecond_system = "0.2.0"
egui_plot = "0.33"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3.70"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
# Force getrandom 0.3 to use wasm_js feature
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = 3 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3
